# dex-trading-system

./: .gitignore  README.md  lint.sh  lint_and_test.sh  pyproject.toml  requirements-tests.txt  requirements.txt  run_light_node.sh  run_tests.sh  trade.sh
.github/workflows/: ninja.yml
base/: logger.py
bots/dydx_state/: handler.py  run_bot.py  sender.py
collect_data/: collect_order_book.py  collect_trades.py  get_trades_from_dydx_api.py
connectors/binance/: connector.py  depth_cache.py
connectors/dydx/: connector.py  order_book_cache.py  user_creation.py
connectors/uniswap/: connector.py
report/kt-1/: main.tex  titlepage.sty
report/kt-2/: bibl.bib  environments.sty  main.aux  main.out  main.tex  main.toc  packages.sty
research/ib-0001-dydx-connector-benchmarks/: speed_measure_class.py  test_speed.py
research/ib-0002-cross-analysis/: best_params_giver.py  binance_get_jumps.py  dex_research.ipynb  dydx_get_trades.py  dydx_send_order.py  dydx_trades_websocket.py  latency_to_binance.py  listen_binance.py  mmqueue.py  my_queue.py  profit_calculation.py  profit_calculator.py  run_best_params_giver.py  run_profit_calc.py  run_trader.py  sanity_check.py  signals_giver.py  sliding_window.py  test.py  test1.py  (+2 more)
research/lp-0005-cpp-in-python/: CMakeLists.txt  compile_and_run.sh  install_python_boost.sh  main.py  mylib.cpp
tests/: linter_check.sh  run_linter.sh  run_tests.sh  send_order.py  test_client_api.py  test_l1_pool_connector.py  test_order_book.py
utils/: dydx_delay_measurer.py  helpful_scripts.py  indicators.py  logger.py  sliding_window.py
(+65 files in other folders)
